Archive2/d3/90ee499522fff2/output
main.cpp:32:16: error: reference to overloaded function could not be resolved; did you mean to call it?
    auto f2 = *qux;
               ^~~
main.cpp:20:6: note: possible target for call
void qux(double t) {
     ^
main.cpp:16:6: note: possible target for call
void qux(int t) {
     ^
1 error generated.
